Fixed JDK 1.5-ism of Character.valueOf(char) by changing it to new Characher(char).
git-svn-id: https://svn.apache.org/repos/asf/openjpa/trunk@567127 13f79535-47bb-0310-9956-ffa450edef68